# GenotypePrediction

./: README.md  pyproject.toml
.github/workflows/: ci.yml
GPtools/data/: preprocessing.py
GPtools/evaluation/: metrics.py
GPtools/inference/: gibbs.py  reml.py
GPtools/models/: GBLUP.py  bayesc_fixed_q.py  bayescpi.py  ridge.py
GPtools/tests/data/: test_preprocessing.py
GPtools/tests/evaluation/: test_metrics.py
GPtools/tests/models/: test_ridge.py
genotypeprediction/models/: GBLUP.py  bayesc_fixed_q.py  ridge.py
genotypeprediction/tests/evaluation/: test_metrics.py
genotypeprediction/tests/models/: test_ridge.py
src/genotypeprediction/data/: preprocessing.py
src/genotypeprediction/evaluation/: metrics.py
src/genotypeprediction/inference/: gibbs.py  reml.py
src/genotypeprediction/models/: bayesc_fixed_q.py  bayescpi.py  gblup.py  ridge.py
tests/data/: test_preprocessing.py
