[project]
name = "GenotypePrediction"
version = "0.1.0"
description = "Python reproductions of classical genotype prediction methods."
authors = [
    {name = "jhonatan", email = "jhonyrf@gmail.com"},
]
dependencies = ["numpy>=2.4.4", "pandas>=3.0.2", "scikit-learn>=1.8.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
